Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84110

qtbase/src/gui/image/qimage_conversions.cpp: compile failure for aarch64_be (undefined reference to storeRGB32FromARGB32PM_neon)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • 5.14.2
    • QPA: LinuxFB
    • None
    • Linux/Other display system

      Compile for aarch64_be fails:

      .obj/qimage_conversions.o: In function `convert_generic(QImageData*, QImageData const*, QFlags<Qt::ImageConversionFlag>)':
      qimage_conversions.cpp:(.text+0x2598): undefined reference to `storeRGB32FromARGB32PM_neon(unsigned char*, unsigned int const*, int, int, QVector<unsigned int> const*, QDitherInfo*)'
      qimage_conversions.cpp:(.text+0x259c): undefined reference to `storeRGB32FromARGB32PM_neon(unsigned char*, unsigned int const*, int, int, QVector<unsigned int> const*, QDitherInfo*)'
      .obj/qimage_conversions.o: In function `convert_generic_inplace(QImageData*, QImage::Format, QFlags<Qt::ImageConversionFlag>)':
      qimage_conversions.cpp:(.text+0x28fc): undefined reference to `storeRGB32FromARGB32PM_neon(unsigned char*, unsigned int const*, int, int, QVector<unsigned int> const*, QDitherInfo*)'
      qimage_conversions.cpp:(.text+0x2900): undefined reference to `storeRGB32FromARGB32PM_neon(unsigned char*, unsigned int const*, int, int, QVector<unsigned int> const*, QDitherInfo*)'
      

      For details see [1] ...

      [1] http://lists.busybox.net/pipermail/buildroot/2020-May/282637.html

        For Gerrit Dashboard: QTBUG-84110
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            p_seiderer Peter Seiderer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes