ARM neon draw helper only available for little endian

Fixes:

  qimage_conversions.cpp:(.text+0x2598): undefined reference to `storeRGB32FromARGB32PM_neon(unsigned char*, unsigned int const*, int, int, QVector<unsigned int> const*, QDitherInfo*)'

Task-number: QTBUG-84110
Change-Id: I61ac697dd1d0b2c793fd5751209cd041ee30ad38
Pick-to: 5.15
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>